# xarray-signature-units

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api.md  example.md  index.md  usage.md
docs/api/: temporal.md
overrides/: main.html
src/xarray_annotated/: __init__.py  _annotations.py  _config.py  _reader.py  _writer.py
src/xarray_annotated/schema/: __init__.py  _annotations.py  _check.py  _config.py  _decorator.py
src/xarray_annotated/temporal/: __init__.py  _annotations.py  _check.py  _config.py  _decorator.py
src/xarray_annotated/units/: __init__.py  _annotations.py  _check.py  _config.py
src/xarray_signature_units/: __init__.py  _annotations.py  _check.py  _config.py  _decorator.py  _registry.py
tests/: conftest.py  test_cf.py  test_compose.py  test_decorator.py  test_reader.py  test_schema.py  test_temporal.py  test_units.py  test_writer.py
