[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[project]
name = "xarray-signature-units"
version = "0.1.0"
description = "Run-time validation of pint/CF units declared in signature annotations on xarray DataArrays"
authors = [
    { name = "jmarshrossney", email = "17361029+jmarshrossney@users.noreply.github.com" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "pint>=0.25.3",
    "pint-xarray>=0.6.1",
    "xarray>=2026.2.0",
]
keywords = ["xarray", "pint", "units", "validation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
cf = ["cf-xarray>=0.11.3"]

[project.urls]
Homepage = "https://jmarshrossney.github.io/xarray-signature-units"
Repository = "https://github.com/jmarshrossney/xarray-signature-units"
Documentation = "https://jmarshrossney.github.io/xarray-signature-units"

[dependency-groups]
dev = [
    "xarray-signature-units[cf]",
    "coverage>=7.13.5",
    "pyright>=1.1.409",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.4",
    "rust-just>=1.46.0",
    "pre-commit>=4.6.0",
    {include-group = "docs"},
]
docs = [
    "mkdocstrings-python>=2.0.5",
    "zensical>=0.0.46",
]

[tool.pytest]
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src/", "tests/"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.uv]
exclude-newer = "1 week"
